child-theme/css/child-theme-custom.css
/************************************
 * Template: 4Site Template - Child Theme Custom
 * Project: Ocean Conservancy
 ***********************************/

/* Add a background image when the page is not embedded or in the page builder */
body:not(.embedded):not(#en__pagebuilder) {
	background: #ffffff url("../images/background/fruit-and-vegetables-seamless-dark.png") repeat;
	background-size: 300px;
	background-position: left top;
}

html.has-image body:not(.embedded):not(#en__pagebuilder) {
	background-size: cover;
	background-repeat: no-repeat;
}

#main-content-wrapper{
	max-width: calc(840px + 4.375rem);
	font-family: 'Roboto', sans-serif !important;
}

#main-content .indented-body{
	margin: 0 4.5rem;
}

#main-content {
    padding-top: 0;
    padding-bottom: 0;
}

.header-logo,
.header-secondary-cta{
	display: flex;
	height: 88px;
	align-items: center;
}

.header-logo{
	justify-content: flex-start;	
}

#main-content .header-logo img{
	height: 52px !important;
	width: auto !important;
	display: block;
}

#main-content .header-logo a{
	cursor: default;
}

.header-secondary-cta{
	justify-content: flex-end;	
}

/* In the event paragraph text is added, remove the margin to precent vertical mis-alignment when centering */
.header-logo .en__component:first-child p,
.header-secondary-cta .en__component:first-child p,
.banner-image .en__component:first-child p{
	margin-top: 0;
}

.header-logo img,
.header-secondary-cta img{
	display: block;
}

body:not(#en__pagebuilder) .banner-image{
	display: none;
}

.pre-footer{
	font-size: 16px;
	font-weight: normal;
	font-style: normal;
	font-stretch: normal;
	line-height: 1.75;
	letter-spacing: normal;
	text-align: center;
	color: #828282;
}

.footer{
	background-color: #323232;
	color: #ffffff;
	font-size: 14px;
	font-style: normal;
	font-stretch: normal;
    line-height: 1.43;
    letter-spacing: 0.6px;
	text-align: center;
	padding: 2.5rem 0;
}

.footer a{
	color: #ffffff;
}

@media (min-width: 600px){
	#main-content .recurring-payment .en__field__item{
	    min-width: 170px;
	}
}

#main-content .en__component--formblock.recurring-payment{
	flex-direction: row;
}

#main-content .donation-amount{
    flex-wrap: wrap;
}

#main-content .banner{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    align-content: center;
    transition: opacity 0.3s;
    background-position: center top;
    background-repeat: no-repeat;
    background-size: cover;
    margin-bottom: 1.6em;
    padding: 2em;
}

body:not(.embedded):not(#en__pagebuilder) #main-content .banner:not(.no-image){
    background-color: #d2d2d2;
}

#main-content .banner.image-100h{
	min-height: 100px;
}

#main-content .banner.image-200h{
	min-height: 200px;
}

#main-content .banner.image-300h{
	min-height: 300px;
}

#main-content .banner.image-400h{
	min-height: 400px;
}

#main-content .banner.image-500h{
	min-height: 500px;
}

#main-content .banner.image-600h{
	min-height: 600px;
}

#main-content .banner.image-700h{
	min-height: 700px;
}

#main-content .banner.image-800h{
	min-height: 800px;
}

#main-content .banner.image-900h{
	min-height: 900px;
}

#main-content .banner.image-1000h{
	min-height: 1000px;
}

#main-content .recurring-payment{
	margin-bottom: 1.2em;
}

#main-content .body-copy{
margin-bottom: 3.2em;
}

body:not(#en__pagebuilder) #main-content .banner-image{
	position: absolute;
}

#main-content .banner-text{
	text-align: center;
	max-width: 500px;
    /* display: flex;
    flex-direction: column;	*/
}

#main-content .banner-text p{
	font-size: 26px;
	font-weight: bold;
	font-style: normal;
	font-stretch: normal;
	letter-spacing: normal;
	padding: 0 .9em;
	color: #323232;
    display: inline-block;
    box-decoration-break: clone;
    /* margin: .4em; */
}

#main-content .banner-text p:first-of-type:not(:only-child){
	padding-top: .3em;
	padding-bottom: .125em;
	margin-bottom: 0;
	/*box-shadow: 10px 0 0 red, -10px 0 0 red;*/
}

#main-content .banner-text p:last-of-type:not(:only-child){
	padding-top: .125em;	
	padding-bottom: .3em;
	margin-top: 0;
	/*box-shadow: 10px 0 0 red, -10px 0 0 red;*/
}

#main-content .banner-text.green p{
	color: #ffffff;
	display: inline;
	background-color: #0e8542;
	padding: .4em 0;
	position: relative;
	box-shadow: 1em 0 0 0 #0e8542, -1em 0 0 0 #0e8542;

}

#main-content .banner-text.red p{
	color: #ffffff;
	display: inline;
	background-color: #d7334b;
	padding: .4em 0;
	position: relative;
	box-shadow: 1em 0 0 0 #d7334b, -1em 0 0 0 #d7334b;

}

#main-content .banner-text.black p{
	color: #ffffff;
	display: inline;
	background-color: #323232;
	padding: .4em 0;
	position: relative;
	box-shadow: 1em 0 0 0 #323232, -1em 0 0 0 #323232;

}

#main-content .banner-text:first-of-type:not(:only-child){
	top: -1em;
}

#main-content .banner-text:last-of-type:not(:only-child){
	bottom: -1em;
}

#main-content .banner-text.lead p{
	font-size: 34px;
}

#main-content .en__field__label {
  font-size: 14px;
  font-weight: 500;
}



#main-content .recurring-payment.pill-buttons.radio-to-buttons .en__field__item{
	width: 170px;
}

#main-content .recurring-payment.pill-buttons.radio-to-buttons label,
#main-content .recurring-payment.pill-buttons.radio-to-buttons input[type='radio'] + label{
	/*min-width: 170px;*/
}

#main-content .pre-footer{
	display: flex;
	align-items: center;
	justify-content: center;	
}

#main-content .pre-footer .en__component{
	max-width: 410px;	
}

/* Give by card */
#main-content #en__field_supporter_questions_1801650 label{

}

/* Give by PayPal */
#main-content #en__field_supporter_questions_1801651 label{
	
}

/* Give by Check */
#main-content #en__field_supporter_questions_1801652 label{
	
}


#main-content .have-questions-call-line p{
	text-align: right;
}

#main-content .have-questions-call-line p:first-of-type{
	font-size: 14px;
	letter-spacing: 0.7px;
	font-weight: bold;
}

#main-content .have-questions-call-line p:last-of-type{
	font-size: 12px;
	letter-spacing: 0.6px;
}
/* ... */

